# Univer-2021-graduation-WEB

./: .gitignore  LICENSE  README.md  db.sqlite3  manage.py  pyproject.toml
WEB_2021_django_react_passwordmnager/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json  views.py  webpack.config.js
frontend/src/components/: App.js
frontend/static/frontend/: main.js
passwords/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
passwords/lib/: DTO.py  crypto.py
passwords/migrations/: 0001_initial.py
templates/: base.html
templates/passwords/: home.html  new_wallet.html  unlock.html  wallet.html
templates/registration/: login.html  signup.html
